# FreeCAD-Weekly-Updater

./: .gitignore  LICENSE  README.md  pyproject.toml  update_freecad_weekly.py
.github/workflows/: ci.yml  package.yml
src/freecad_weekly_updater/: __init__.py  __main__.py  _core.py
