[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freecad-weekly-updater"
version = "0.1.0"
description = "Download and install the latest FreeCAD weekly build on Windows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["freecad", "updater", "weekly"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

[project.scripts]
freecad-weekly-updater = "freecad_weekly_updater:main"

[dependency-groups]
dev = ["mypy>=2.1", "ruff>=0.15", "pylint>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/freecad_weekly_updater"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # perflint
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "ANN401", # Any is acceptable in low-level callbacks
    "TRY003", # long messages in raise are fine for a CLI tool
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # re-exports are intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.messages_control]
disable = [
    "C0301", # line-too-long
]
